blockml/test/errors/11_report/e156/e156_one.view
view: e156_one
table: '[flow-1202:bqtest.orders]'
fields:
- dimension: dim1
  sql: 111

- dimension: dim2
  sql: 222


